# Physics-Informed-ML

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.gpu  LICENSE  PHASE4_SUMMARY.md  README.md  docker-compose.yml  handler.py  pyproject.toml  requirements-lambda.txt
.github/workflows/: benchmark.yml  ci.yml  deploy-backend.yml  deploy-frontend.yml  fix-lint.yml  lint-fix.yml  test.yml
docs/: api.md  deployment.md  neural_operators.md  phase1_architecture.md  research-features.md
examples/: README.md  train_pendulum_pinn.py
examples/api/: README.md  client_example.py
examples/neural_operators/: README.md  run_fno_benchmark.py
frontend/: .env.example  README.md  index.html  netlify.toml  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChartPanel.tsx  ControlPanel.tsx  ExportPanel.tsx  Layout.tsx  MetricsPanel.tsx  ModelSelector.tsx  ParameterSlider.tsx  PerformanceMetrics.tsx  Simulator.tsx  Visualization3D.tsx  Visualizer3D.tsx
frontend/src/components/visualizations/: HeatField.tsx  WaveField.tsx
frontend/src/lib/: api.ts  websocket.ts
frontend/src/store/: simulationStore.ts
infrastructure/cloudflare/: workers.js  wrangler.toml
infrastructure/kubernetes/: deployment.yaml  gpu-deployment.yaml
infrastructure/monitoring/: grafana-dashboard.json  prometheus.yaml
infrastructure/terraform/: main.tf  variables.tf
legacy/: pendulum_original.py
scripts/: fix_lint.sh
src/physics_informed_ml/: __init__.py  cli.py
src/physics_informed_ml/api/: __init__.py  inference.py  main.py  models.py  websocket.py
src/physics_informed_ml/benchmarks/: __init__.py  metrics.py  problems.py  runner.py
src/physics_informed_ml/core/: __init__.py  config.py
src/physics_informed_ml/models/: __init__.py  base.py  losses.py  mlp.py  pinn.py
src/physics_informed_ml/models/operators/: __init__.py  fno.py
src/physics_informed_ml/operators/: __init__.py
src/physics_informed_ml/pde/: __init__.py
src/physics_informed_ml/research/: __init__.py  explain.py  transfer.py  uncertainty.py
src/physics_informed_ml/solvers/: __init__.py  integrators.py  pendulum.py
src/physics_informed_ml/training/: __init__.py  dataset.py  trainer.py
tests/: __init__.py  conftest.py  test_api.py  test_benchmarks.py  test_neural_operators.py
tests/benchmark/: .gitkeep  __init__.py  test_fno_benchmark.py
tests/unit/: test_cli.py  test_config.py  test_mlp.py  test_pendulum.py  test_pinn.py  test_placeholder.py  test_training.py
